# music_bg

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
music_bg/: __init__.py  __main__.py  argparse.py  background.py  config.py  context.py  logging.py  utils.py
music_bg/dbus/: __init__.py  handlers.py  loop.py
music_bg/img_processors/: __init__.py  blank_img.py  blur.py  circle.py  fit.py  gradients.py  load_img.py  noop.py  pop.py  print.py  processor.py  resize.py
music_bg/img_variables/: colors.py  uuid_gen.py
